Descripción de los cambios

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>AkEnriqueG</h1>
+<h1>Jose Enrique Trujillo Gomez</h1>
+<br><br>
+<h2>Conocimientos</h2>
+<h3>Conocimientos</h3>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
