Descripción de los cambios

--- a/index.html
+++ b/index.html
@@ -1,10 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Jose Enrique Trujillo Gomez - Portfolio</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+
+        h1, h2, h3 {
+            color: #333;
+        }
+
+        h1 {
+            margin-bottom: 10px;
+        }
+
+        h2 {
+            margin-top: 20px;
+            color: #007bff;
+        }
+
+        h3 {
+            color: #28a745;
+        }
+
+        p {
+            line-height: 1.6;
+        }
+    </style>
+</head>
 <body>
-<h1>Jose Enrique Trujillo Gomez</h1>
-<br><br>
-<h2>Conocimientos</h2>
-<h3>Conocimientos</h3>
-<p>I'm hosted with GitHub Pages.</p>
+
+<header>
+    <h1>Jose Enrique Trujillo Gomez</h1>
+</header>
+
+<section>
+    <h2>Perfil Profesional</h2>
+    <p>Soy un analista de seguridad informática con más de 3 años de experiencia en Google. Mi enfoque se centra en garantizar la integridad, confidencialidad y disponibilidad de la información, utilizando un conjunto diverso de habilidades técnicas y estratégicas.</p>
+</section>
+
+<section>
+    <h2>Conocimientos</h2>
+    <h3>Seguridad Informática</h3>
+    <p>Experiencia sólida en la implementación de medidas de seguridad, gestión de incidentes, análisis forense y evaluación de riesgos.</p>
+    
+    <h3>Lenguajes de Programación</h3>
+    <p>Competente en Python y JavaScript para automatización y desarrollo de herramientas de seguridad.</p>
+
+    <h3>Infraestructura en la Nube</h3>
+    <p>Experiencia en la configuración segura de entornos en la nube, especialmente en Google Cloud Platform.</p>
+</section>
+
+<section>
+    <h2>Experiencia Laboral</h2>
+    <h3>Analista de Seguridad - Google (2019-Actualidad)</h3>
+    <p>Responsable de supervisar la seguridad de los sistemas, identificar y mitigar vulnerabilidades, y liderar investigaciones de incidentes de seguridad.</p>
+</section>
+
+<section>
+    <h2>Educación</h2>
+    <h3>Grado en Seguridad Informática - Universidad XYZ (2016-2019)</h3>
+    <p>Curso especializado en técnicas avanzadas de seguridad informática, gestión de riesgos y auditoría de sistemas.</p>
+</section>
+
+<footer>
+    <p>Este sitio está alojado en GitHub Pages.</p>
+</footer>
+
 </body>
 </html>
