--- a/index.html
+++ b/index.html
@@ -3,146 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jose Enrique Trujillo Gomez - Portfolio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f8f9fa;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 20px;
-        }
-
-        header {
-            background-color: #007bff;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-            border-radius: 8px;
-        }
-
-        section {
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-        }
-
-        h1, h2, h3 {
-            color: #007bff;
-        }
-
-        h2 {
-            margin-top: 20px;
-        }
-
-        h3 {
-            color: #28a745;
-        }
-
-        p {
-            line-height: 1.6;
-        }
-
-        .highlight {
-            background-color: #007bff;
-            color: #fff;
-            padding: 10px;
-            border-radius: 4px;
-        }
-
-        .tile {
-            background-color: #007bff;
-            color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-
-        .experience-panel {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        .experience-panel h3 {
-            margin-bottom: 5px;
-        }
-
-        .education-panel {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        .education-panel h3 {
-            margin-bottom: 5px;
-        }
-
-        footer {
-            text-align: center;
-            padding: 20px 0;
-            background-color: #007bff;
-            color: #fff;
-            border-radius: 8px;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
+    <title>Portafolio de [Tu Nombre]</title>
 </head>
 <body>
 
-<header>
-    <h1>Jose Enrique Trujillo Gomez</h1>
-</header>
-
-<section class="tile">
-    <h2>Perfil Profesional</h2>
-    <p>Soy un analista de seguridad informática con más de 3 años de experiencia en Google. Mi enfoque se centra en garantizar la integridad, confidencialidad y disponibilidad de la información, utilizando un conjunto diverso de habilidades técnicas y estratégicas.</p>
-</section>
-
-<section class="tile">
-    <h2>Conocimientos</h2>
-    <div class="skills-panel">
-        <div>
-            <h3>Seguridad Informática</h3>
-            <p>Experiencia sólida en la implementación de medidas de seguridad, gestión de incidentes, análisis forense y evaluación de riesgos.</p>
+    <header>
+        <div class="container">
+            <h1>[Tu Nombre]</h1>
+            <p>Analista de Seguridad Informática</p>
         </div>
-        <div>
-            <h3>Lenguajes de Programación</h3>
-            <p>Competente en Python y JavaScript para automatización y desarrollo de herramientas de seguridad.</p>
-        </div>
-        <div>
-            <h3>Infraestructura en la Nube</h3>
-            <p>Experiencia en la configuración segura de entornos en la nube, especialmente en Google Cloud Platform.</p>
-        </div>
-    </div>
-</section>
+    </header>
 
-<section class="tile">
-    <h2>Experiencia Laboral</h2>
-    <div class="experience-panel">
-        <div>
-            <h3>Analista de Seguridad - Google (2019-Actualidad)</h3>
-            <p>Responsable de supervisar la seguridad de los sistemas, identificar y mitigar vulnerabilidades, y liderar investigaciones de incidentes de seguridad.</p>
+    <section class="about-me">
+        <div class="container">
+            <h2>Sobre Mí</h2>
+            <p>Soy un apasionado analista de seguridad informática con más de 3 años de experiencia en Google. Mi enfoque se centra en...</p>
+            <!-- Puedes agregar más información sobre ti -->
         </div>
-    </div>
-</section>
+    </section>
 
-<section class="tile">
-    <h2>Educación</h2>
-    <div class="education-panel">
-        <div>
-            <h3>Grado en Seguridad Informática - Universidad XYZ (2016-2019)</h3>
-            <p>Curso especializado en técnicas avanzadas de seguridad informática, gestión de riesgos y auditoría de sistemas.</p>
+    <section class="skills">
+        <div class="container">
+            <h2>Habilidades</h2>
+            <ul>
+                <li>Ciberseguridad</li>
+                <li>Penetration Testing</li>
+                <li>Seguridad de la red</li>
+                <!-- Agrega más habilidades inventadas -->
+            </ul>
         </div>
-    </div>
-</section>
+    </section>
 
-<footer>
-    <p>Este sitio está alojado en GitHub Pages.</p>
-</footer>
+    <section class="experience">
+        <div class="container">
+            <h2>Experiencia Laboral</h2>
+            <div class="job">
+                <h3>Google</h3>
+                <p class="job-title">Analista de Seguridad Informática</p>
+                <p class="job-duration">2019 - Actualidad</p>
+                <p class="job-description">Trabajé en proyectos clave de seguridad informática, identificando vulnerabilidades y desarrollando estrategias de mitigación...</p>
+            </div>
+            <!-- Puedes agregar más experiencias laborales ficticias -->
+        </div>
+    </section>
+
+    <!-- Puedes agregar más secciones como proyectos, educación, certificaciones, etc. -->
+
+    <footer>
+        <div class="container">
+            <p>Contacto: [Tu Correo Electrónico] | [Tu Número de Teléfono]</p>
+        </div>
+    </footer>
 
 </body>
 </html>
