--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <header>
         <div class="container">
-            <h1>[Tu Nombre]</h1>
+            <h1>Jose Enrique Trujillo Gomez</h1>
+            <p>Tecnologías de la Información y las Comunicaciones</p>
             <p>Analista de Seguridad Informática</p>
         </div>
     </header>
@@ -18,8 +19,9 @@
     <section class="about-me">
         <div class="container">
             <h2>Sobre Mí</h2>
-            <p>Soy un apasionado analista de seguridad informática con más de 3 años de experiencia en Google. Mi enfoque se centra en...</p>
-            <!-- Puedes agregar más información sobre ti -->
+            <p>Soy un apasionado estudiante de seguridad informática y Tecnologías de la informacion.</p>
+            <p>Me distingo por mi enfoque decidido en la consecución de metas y objetivos con eficiencia. Soy reconocido como una persona altamente productiva y comprometida con la obtención de resultados tangibles. Mi carácter proactivo se manifiesta en una fuerte determinación para superar obstáculos y completar tareas de manera puntual. Destaco por valorar la medición del desempeño y por buscar constantemente formas de optimizar procesos con el fin de alcanzar el éxito en el ámbito laboral.</p>
+        
         </div>
     </section>
 
@@ -27,10 +29,15 @@
         <div class="container">
             <h2>Habilidades</h2>
             <ul>
+                <li>Programacion</li>
+                <li>Sistemas Operativos</li>
+                <li>Bases de Datos</li>
+                <li>Ciberseguridad</li>
+                <li>Internet dof Things</li>
                 <li>Ciberseguridad</li>
                 <li>Penetration Testing</li>
                 <li>Seguridad de la red</li>
-                <!-- Agrega más habilidades inventadas -->
+          
             </ul>
         </div>
     </section>
@@ -48,11 +55,24 @@
         </div>
     </section>
 
+    <section class="study">
+        <div class="container">
+            <h2>Estudios</h2>
+            <div class="job">
+                <h3>Google</h3>
+                <p class="job-title">Instituto Tecnologico de Puebla (ITP)</p>
+                <p class="job-duration">Universidad Virtual del Estado de Guanajuato (UVEG)</p>
+                <p class="job-description">Hack The Box: </p>
+            </div>
+            <!-- Puedes agregar más experiencias laborales ficticias -->
+        </div>
+    </section>
+
     <!-- Puedes agregar más secciones como proyectos, educación, certificaciones, etc. -->
 
     <footer>
         <div class="container">
-            <p>Contacto: [Tu Correo Electrónico] | [Tu Número de Teléfono]</p>
+            <p>Contacto: [ trujilloenrique315@gmail.com] | [ WhatsApp 2212994374 ]</p>
         </div>
     </footer>
 
