Descripción de los cambios

--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Portafolio de [Tu Nombre]</title>
+    <title>Portfolio de Jose Enrique Trujillo</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+        integrity="sha512-vhB47iZ5hSqb0EBkz0FcSA6JXdSpZDJW8kwFQNK39/6bCUZh4J1Rl+ZlGge2Y3ZPb3XSVEsZ2JJ2Fb+X+umVEw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
 
     <header>
@@ -19,37 +24,41 @@
     <section class="about-me">
         <div class="container">
             <h2>Sobre Mí</h2>
-            <p>Soy un apasionado estudiante de seguridad informática y Tecnologías de la informacion.</p>
-            <p>Me distingo por mi enfoque decidido en la consecución de metas y objetivos con eficiencia. Soy reconocido como una persona altamente productiva y comprometida con la obtención de resultados tangibles. Mi carácter proactivo se manifiesta en una fuerte determinación para superar obstáculos y completar tareas de manera puntual. Destaco por valorar la medición del desempeño y por buscar constantemente formas de optimizar procesos con el fin de alcanzar el éxito en el ámbito laboral.</p>
-        
+            <p>Soy un apasionado estudiante de seguridad informática y Tecnologías de la informacion. Me distingo por mi
+                enfoque decidido en la consecución de metas y objetivos con eficiencia. </p>
+            <p>Soy reconocido como una persona altamente productiva y comprometida con la obtención de resultados
+                tangibles. Mi carácter proactivo se manifiesta en una fuerte determinación para superar obstáculos y
+                completar tareas de manera puntual. </p>
+            <p>Destaco por valorar la medición del desempeño y por buscar constantemente formas de optimizar procesos
+                con el fin de alcanzar el éxito en el ámbito laboral.</p>
+
         </div>
     </section>
 
     <section class="skills">
         <div class="container">
             <h2>Habilidades</h2>
-            <ul>
-                <li>Programacion</li>
-                <li>Sistemas Operativos</li>
-                <li>Bases de Datos</li>
-                <li>Ciberseguridad</li>
-                <li>Internet dof Things</li>
-                <li>Ciberseguridad</li>
-                <li>Penetration Testing</li>
-                <li>Seguridad de la red</li>
-          
+            <ul class="skills-list">
+                <li><i class="fas fa-code"></i> Programación</li>
+                <li><i class="fas fa-desktop"></i> Sistemas Operativos</li>
+                <li><i class="fas fa-database"></i> Bases de Datos</li>
+                <li><i class="fas fa-shield-alt"></i> Ciberseguridad</li>
+                <li><i class="fas fa-wifi"></i> Internet of Things</li>
+                <li><i class="fas fa-user-secret"></i> Penetration Testing</li>
+                <li><i class="fas fa-network-wired"></i> Seguridad de la Red</li>
             </ul>
         </div>
     </section>
+
 
     <section class="experience">
         <div class="container">
             <h2>Experiencia Laboral</h2>
             <div class="job">
-                <h3>Google</h3>
+                <h3>Trabajo</h3>
                 <p class="job-title">Analista de Seguridad Informática</p>
                 <p class="job-duration">2019 - Actualidad</p>
-                <p class="job-description">Trabajé en proyectos clave de seguridad informática, identificando vulnerabilidades y desarrollando estrategias de mitigación...</p>
+                <p class="job-description">Trabajé en ...</p>
             </div>
             <!-- Puedes agregar más experiencias laborales ficticias -->
         </div>
@@ -59,10 +68,10 @@
         <div class="container">
             <h2>Estudios</h2>
             <div class="job">
-                <h3>Google</h3>
-                <p class="job-title">Instituto Tecnologico de Puebla (ITP)</p>
-                <p class="job-duration">Universidad Virtual del Estado de Guanajuato (UVEG)</p>
-                <p class="job-description">Hack The Box: </p>
+                <p class="job-title">Instituto Tecnologico de Puebla (ITP) 2021-2023</p>
+                <p class="job-title">Universidad Virtual del Estado de Guanajuato (UVEG) 2023 - Actualidad </p>
+                <p class="job-title">Hack The Box: AkEnriqueG</p>
+                <p class="job-title"> Hack my VM: https://hackmyvm.eu/profile/?user=AkEnriqueG </p>
             </div>
             <!-- Puedes agregar más experiencias laborales ficticias -->
         </div>
@@ -73,8 +82,10 @@
     <footer>
         <div class="container">
             <p>Contacto: [ trujilloenrique315@gmail.com] | [ WhatsApp 2212994374 ]</p>
+
         </div>
     </footer>
 
 </body>
+
 </html>
