--- a/index.html
+++ b/index.html
@@ -13,13 +13,28 @@
 
 <body>
 
-    <header>
-        <div class="container">
-            <h1>Jose Enrique Trujillo Gomez</h1>
-            <p>Tecnologías de la Información y las Comunicaciones</p>
-            <p>Analista de Seguridad Informática</p>
-        </div>
+
+    <header class="
+        flex justify-center items-center
+        mx-auto
+        py-0
+        sticky top-0
+        w-full xl:w-[1120px]
+        z-30">
+        <nav class="
+          border border-black rounded-full
+          px-3 py-2
+          flex flex-row items-center
+          bg-neutral-200 dark:bg-black/50
+          backdrop-blur-2xl">
+            <a class="hover:bg-white/10 rounded-full px-3 transition" href="#inicio">Inicio</a>
+            <a class="hover:bg-white/10 rounded-full px-3 transition" href="#experiencia">Experiencia</a>
+            <a class="hover:bg-white/10 rounded-full px-3 transition" href="#portfolio">Proyectos</a>
+            <a class="hover:bg-white/10 rounded-full px-3 transition" href="#contacto">Contacto</a>
+        </nav>
     </header>
+
+
 
     <section class="about-me">
         <div class="container">
